# semantic_file_explorer

./: README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chunker.rs  db.rs  embedder.rs  lib.rs  main.rs  search.rs  watcher.rs
src-tauri/src/commands/: fs_commands.rs  indexing_commands.rs  mod.rs  watcher_commands.rs
src-tauri/src/core/: error.rs  file_system.rs  mod.rs
src/commands/: benchmark_commands.rs  file_operations.rs  mod.rs  search_commands.rs
src/components/FileExplorerBody/: FileExplorer.tsx  FileGrid.tsx  FileIcon.tsx  FileItem.tsx  FileList.tsx  FolderItem.tsx
src/components/TopBar/: DropdownMenu.tsx  NavigationIcons.tsx  TopBar.tsx
src/components/layout/: LibraryDropdown.tsx  NavButton.tsx  Navbar.tsx  Sidebar.tsx
src/lib/: utils.ts
src/store/: atoms.ts
src/types/: file.ts
