[package]
name = "semantic_file_explorer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "semantic_file_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.8"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "full",
    "fs"
] } # Need fs, rt-multi-thread, macros
thiserror = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = [
    "serde",
] } # Add chrono with serde feature
mime_guess = "2.0"

directories-next = "2.0"
# Add tracing if you want logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Add opener crate for opening files/folders with default app
opener = "0.6"

# Add hostname crate to get the computer name
hostname = "0.3"
tauri-plugin-dialog = "2"

# Dependencies for Thumbnail Generation
image = "0.25"
ffmpeg-next = { version = "7.0", features = ["image"] } # Requires FFmpeg installed on system
sha2 = "0.10"
lazy_static = "1.4"

# Dedicated PNG decoder crate
png = "0.17"
